# trimul-lib

./: .gitignore  pyproject.toml
src/trimul_lib/: __init__.py  torch_impl.py
