[project]
name = "trimul-lib"
version = "0.1.0"
description = "Kernels and modules for triangular multiplication"
authors = [{ name = "Tim-Henrik Buelles", email = "thbuelles@gmail.com" }]
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.8"

dependencies = [
  "torch>=2.1",
  "einops>=0.3",
  "numpy"
]

[project.optional-dependencies]
dev = [
  "pytest"
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
